<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/main_text"
        android:textSize="26sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emaileditText"
        android:layout_width="323dp"
        android:layout_height="53dp"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text=""
        android:maxLines="1"
        android:hint="@string/edittextemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/passwordeditText"
        android:layout_width="323dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/edittextpass"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emaileditText" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="210dp"
        android:layout_height="61dp"
        android:layout_marginTop="42dp"
        android:text="@string/button_login_text"
        android:textColor="@color/colorAccent"
        android:background="@android:color/transparent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordeditText" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="322dp"
        android:layout_height="61dp"
        android:layout_marginTop="42dp"
        android:text="@string/signupbuttontext"
        android:textColor="@color/colorAccent"
        android:background="@android:color/transparent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />


</androidx.constraintlayout.widget.ConstraintLayout>